--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -139,7 +139,7 @@ services:
     redis:
         build: ./redis
         volumes:
-            - ./data/redis:/data
+            - ./redis/data:/data
         ports:
             - "${REDIS_PORT}:6379"
         networks:
