update .env-example add redis

--- a/.env-example
+++ b/.env-example
@@ -32,6 +32,7 @@ PHPFPM_INSTALL_XDEBUG=true
 PHPFPM_INSTALL_MONGO=true
 PHPFPM_INSTALL_ZIP_ARCHIVE=false
 PHPFPM_INSTALL_OPCACHE=true
+PHPFPM_INSTALL_REDIS=true
 
 ##############################################
 
